--- a/.github/workflows/build-ros.yml
+++ b/.github/workflows/build-ros.yml
@@ -24,11 +24,11 @@ jobs:
             ros_distribution: humble
             ros_version: 2
 
-          # Iron Irwini (May 2023 - November 2024)
-          - docker_image: ubuntu:jammy
-            ros_distribution: iron
+          # Jazzy (2024 - 2029)
+          - docker_image: ubuntu:noble
+            ros_distribution: jazzy
             ros_version: 2
-
+       
           # Rolling Ridley (No End-Of-Life)
           - docker_image: ubuntu:noble
             ros_distribution: rolling
