--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 392fa9f7
-	base = 80d73500
+	base = 46eeec36
 	trim = mrpt_reactivenav2d
-	trimbase = 
+	trimbase = 80d73500
