--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 392fa9f7
-	base = da2010e2
+	base = e22c2f04
 	trim = mrpt_tps_astar_planner
-	trimbase = 
+	trimbase = da2010e2
