--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 392fa9f7
-	base = c653c894
+	base = 5b8999b0
 	trim = mrpt_nav_interfaces
-	trimbase = 
+	trimbase = c653c894
