--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 392fa9f7
-	base = 2d52856a
+	base = 3ca948d9
 	trim = mrpt_navigation
-	trimbase = 
+	trimbase = 2d52856a
