--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 392fa9f7
-	base = 2eee315f
+	base = 97298f35
 	trim = mrpt_tutorials
-	trimbase = 
+	trimbase = 2eee315f
