--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 392fa9f7
-	base = b6780097
+	base = 7f641324
 	trim = mrpt_msgs_bridge
-	trimbase = 
+	trimbase = b6780097
