--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 392fa9f7
-	base = 879d1d3d
+	base = ef262cda
 	trim = mrpt_rawlog
-	trimbase = 
+	trimbase = 879d1d3d
