--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 392fa9f7
-	base = f1d633d2
+	base = 615e79d0
 	trim = mrpt_pointcloud_pipeline
-	trimbase = 
+	trimbase = f1d633d2
