--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 392fa9f7
-	base = 88e54e70
+	base = 6af68fd5
 	trim = mrpt_pf_localization
-	trimbase = 
+	trimbase = 88e54e70
