--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 392fa9f7
-	base = 60a959b4
+	base = 7cb3d9e3
 	trim = mrpt_map_server
-	trimbase = 
+	trimbase = 60a959b4
