--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 63d6d1a3
-	base = 7a8f20fd
+	base = b6b3fd44
 	trim = mrpt_reactivenav2d
-	trimbase = 
+	trimbase = 7a8f20fd
