--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 63d6d1a3
-	base = b8d225b5
+	base = 38525e0d
 	trim = mrpt_tps_astar_planner
-	trimbase = 
+	trimbase = b8d225b5
