--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 63d6d1a3
-	base = a2e8af9b
+	base = 8290e78e
 	trim = mrpt_nav_interfaces
-	trimbase = 
+	trimbase = a2e8af9b
