--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 63d6d1a3
-	base = 2855d068
+	base = 2cff2dab
 	trim = mrpt_navigation
-	trimbase = 
+	trimbase = 2855d068
