--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 63d6d1a3
-	base = 8d2ab56f
+	base = 3231ebdd
 	trim = mrpt_tutorials
-	trimbase = 
+	trimbase = 8d2ab56f
