--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 63d6d1a3
-	base = df2d504c
+	base = 51434baf
 	trim = mrpt_msgs_bridge
-	trimbase = 
+	trimbase = df2d504c
