--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 63d6d1a3
-	base = d37c2171
+	base = 0f7170e2
 	trim = mrpt_rawlog
-	trimbase = 
+	trimbase = d37c2171
