--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 63d6d1a3
-	base = c1d9ee20
+	base = 6196a6d0
 	trim = mrpt_pointcloud_pipeline
-	trimbase = 
+	trimbase = c1d9ee20
