--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 63d6d1a3
-	base = 3b6eb310
+	base = 17fcc59e
 	trim = mrpt_pf_localization
-	trimbase = 
+	trimbase = 3b6eb310
