--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 63d6d1a3
-	base = 2896a0dc
+	base = 8f84f1d2
 	trim = mrpt_map_server
-	trimbase = 
+	trimbase = 2896a0dc
