--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 63d6d1a3
-	base = a9c98397
+	base = 44589e0c
 	trim = mrpt_reactivenav2d
-	trimbase = 
+	trimbase = a9c98397
