--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 63d6d1a3
-	base = 610c77c0
+	base = a5b66a35
 	trim = mrpt_tps_astar_planner
-	trimbase = 
+	trimbase = 610c77c0
