--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 63d6d1a3
-	base = b050183d
+	base = cc227f53
 	trim = mrpt_nav_interfaces
-	trimbase = 
+	trimbase = b050183d
