--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 63d6d1a3
-	base = f86316b1
+	base = 81afbf9a
 	trim = mrpt_navigation
-	trimbase = 
+	trimbase = f86316b1
