--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 63d6d1a3
-	base = e66d1149
+	base = b0634dd9
 	trim = mrpt_tutorials
-	trimbase = 
+	trimbase = e66d1149
