--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 63d6d1a3
-	base = edf7a6b3
+	base = a95b5c3a
 	trim = mrpt_msgs_bridge
-	trimbase = 
+	trimbase = edf7a6b3
