--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 63d6d1a3
-	base = 9fa031f1
+	base = 2554fc75
 	trim = mrpt_rawlog
-	trimbase = 
+	trimbase = 9fa031f1
