--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 63d6d1a3
-	base = 9a18dec3
+	base = daf996a3
 	trim = mrpt_pointcloud_pipeline
-	trimbase = 
+	trimbase = 9a18dec3
