--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 63d6d1a3
-	base = 10e60093
+	base = aaf093fd
 	trim = mrpt_pf_localization
-	trimbase = 
+	trimbase = 10e60093
