--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 63d6d1a3
-	base = f6e4360a
+	base = 827c3b58
 	trim = mrpt_map_server
-	trimbase = 
+	trimbase = f6e4360a
