--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 63d6d1a3
-	base = 909e7df3
+	base = bad18b85
 	trim = mrpt_reactivenav2d
-	trimbase = 
+	trimbase = 909e7df3
