--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 63d6d1a3
-	base = 58842134
+	base = b9cb4ea7
 	trim = mrpt_tps_astar_planner
-	trimbase = 
+	trimbase = 58842134
