--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 63d6d1a3
-	base = 2ec5212a
+	base = 3041cc1c
 	trim = mrpt_nav_interfaces
-	trimbase = 
+	trimbase = 2ec5212a
