--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 63d6d1a3
-	base = d11942fa
+	base = d04e7680
 	trim = mrpt_navigation
-	trimbase = 
+	trimbase = d11942fa
