--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 63d6d1a3
-	base = a256efb6
+	base = 36bee29a
 	trim = mrpt_tutorials
-	trimbase = 
+	trimbase = a256efb6
