--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 63d6d1a3
-	base = d119c911
+	base = 3ff3052d
 	trim = mrpt_msgs_bridge
-	trimbase = 
+	trimbase = d119c911
