--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 63d6d1a3
-	base = 84ea300b
+	base = b7fa0913
 	trim = mrpt_rawlog
-	trimbase = 
+	trimbase = 84ea300b
