--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 63d6d1a3
-	base = 70ecc05a
+	base = 4eeff20b
 	trim = mrpt_pointcloud_pipeline
-	trimbase = 
+	trimbase = 70ecc05a
