--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 63d6d1a3
-	base = e97bf971
+	base = f8542767
 	trim = mrpt_pf_localization
-	trimbase = 
+	trimbase = e97bf971
