--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 63d6d1a3
-	base = b0761d2d
+	base = 269b70dc
 	trim = mrpt_map_server
-	trimbase = 
+	trimbase = b0761d2d
