--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 63d6d1a3
-	base = d73767b1
+	base = ef4a62db
 	trim = mrpt_reactivenav2d
-	trimbase = 
+	trimbase = d73767b1
