--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 63d6d1a3
-	base = e6d7d8c0
+	base = 4249d000
 	trim = mrpt_tps_astar_planner
-	trimbase = 
+	trimbase = e6d7d8c0
