--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 63d6d1a3
-	base = c46c7c7d
+	base = 996a994d
 	trim = mrpt_nav_interfaces
-	trimbase = 
+	trimbase = c46c7c7d
