--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 63d6d1a3
-	base = 313cf7b9
+	base = 81698ee3
 	trim = mrpt_navigation
-	trimbase = 
+	trimbase = 313cf7b9
