--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 63d6d1a3
-	base = 15bc4fd0
+	base = da89961d
 	trim = mrpt_tutorials
-	trimbase = 
+	trimbase = 15bc4fd0
