--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 63d6d1a3
-	base = 06cc4a07
+	base = ddf14655
 	trim = mrpt_msgs_bridge
-	trimbase = 
+	trimbase = 06cc4a07
