--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 63d6d1a3
-	base = d8efb948
+	base = 1d929c2f
 	trim = mrpt_rawlog
-	trimbase = 
+	trimbase = d8efb948
