--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 63d6d1a3
-	base = 4ea40e06
+	base = 4c3665c0
 	trim = mrpt_pointcloud_pipeline
-	trimbase = 
+	trimbase = 4ea40e06
