--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 63d6d1a3
-	base = be4b315f
+	base = f1afcfb9
 	trim = mrpt_map_server
-	trimbase = 
+	trimbase = be4b315f
