--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 64ec48e7
-	base = 514d898c
+	base = d93f17dc
 	trim = mrpt_reactivenav2d
-	trimbase = 
+	trimbase = 514d898c
