--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 64ec48e7
-	base = 6abf7c4c
+	base = c860c936
 	trim = mrpt_tps_astar_planner
-	trimbase = 
+	trimbase = 6abf7c4c
