--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 64ec48e7
-	base = 7706db8d
+	base = 87757cab
 	trim = mrpt_nav_interfaces
-	trimbase = 
+	trimbase = 7706db8d
