--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 64ec48e7
-	base = 4d29de66
+	base = 0f22dd66
 	trim = mrpt_navigation
-	trimbase = 
+	trimbase = 4d29de66
