--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 64ec48e7
-	base = ffe09dcc
+	base = 0e098c62
 	trim = mrpt_tutorials
-	trimbase = 
+	trimbase = ffe09dcc
