--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 64ec48e7
-	base = ed7b953a
+	base = 2e3a8064
 	trim = mrpt_msgs_bridge
-	trimbase = 
+	trimbase = ed7b953a
