--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 64ec48e7
-	base = 5f242f9c
+	base = 84342268
 	trim = mrpt_rawlog
-	trimbase = 
+	trimbase = 5f242f9c
