--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 64ec48e7
-	base = 7a1df1fc
+	base = 349d8da2
 	trim = mrpt_pointcloud_pipeline
-	trimbase = 
+	trimbase = 7a1df1fc
