--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 64ec48e7
-	base = c6a7b7db
+	base = c1576ccf
 	trim = mrpt_pf_localization
-	trimbase = 
+	trimbase = c6a7b7db
