--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 64ec48e7
-	base = 84d3991e
+	base = a6b30310
 	trim = mrpt_map_server
-	trimbase = 
+	trimbase = 84d3991e
