--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 64ec48e7
-	base = 3f656664
+	base = a3abf9d2
 	trim = mrpt_reactivenav2d
-	trimbase = 
+	trimbase = 3f656664
