--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 64ec48e7
-	base = 0e9d914f
+	base = 2c05d70e
 	trim = mrpt_tps_astar_planner
-	trimbase = 
+	trimbase = 0e9d914f
