--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 64ec48e7
-	base = d02b6d8b
+	base = 6ea73c7e
 	trim = mrpt_nav_interfaces
-	trimbase = 
+	trimbase = d02b6d8b
