--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 64ec48e7
-	base = b381a60a
+	base = 83b26138
 	trim = mrpt_navigation
-	trimbase = 
+	trimbase = b381a60a
