--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 64ec48e7
-	base = 56d31260
+	base = c7e312c6
 	trim = mrpt_tutorials
-	trimbase = 
+	trimbase = 56d31260
