--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 64ec48e7
-	base = 57b1b660
+	base = 4412690e
 	trim = mrpt_msgs_bridge
-	trimbase = 
+	trimbase = 57b1b660
