--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 64ec48e7
-	base = 88b37806
+	base = 6892eac0
 	trim = mrpt_rawlog
-	trimbase = 
+	trimbase = 88b37806
