--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 64ec48e7
-	base = 1214dff3
+	base = 694a7cad
 	trim = mrpt_pointcloud_pipeline
-	trimbase = 
+	trimbase = 1214dff3
