--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 64ec48e7
-	base = 98ae7142
+	base = e260b5af
 	trim = mrpt_pf_localization
-	trimbase = 
+	trimbase = 98ae7142
