--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 64ec48e7
-	base = b33dac88
+	base = 31739f7b
 	trim = mrpt_map_server
-	trimbase = 
+	trimbase = b33dac88
