--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 14f6fb8e
-	base = f224df40
+	base = bc668370
 	trim = mrpt_reactivenav2d
-	trimbase = 
+	trimbase = f224df40
