--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 14f6fb8e
-	base = 00f9153b
+	base = 7d781e37
 	trim = mrpt_tps_astar_planner
-	trimbase = 
+	trimbase = 00f9153b
