--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 14f6fb8e
-	base = 7bf1457c
+	base = 944ed1a1
 	trim = mrpt_nav_interfaces
-	trimbase = 
+	trimbase = 7bf1457c
