--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 14f6fb8e
-	base = 2fdf4ce1
+	base = a6ffb80e
 	trim = mrpt_navigation
-	trimbase = 
+	trimbase = 2fdf4ce1
