--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 14f6fb8e
-	base = 54993b39
+	base = 7c87d56c
 	trim = mrpt_tutorials
-	trimbase = 
+	trimbase = 54993b39
