--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 14f6fb8e
-	base = faaa5752
+	base = 6c85d680
 	trim = mrpt_msgs_bridge
-	trimbase = 
+	trimbase = faaa5752
