--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 14f6fb8e
-	base = 86c7b2d1
+	base = 7fb043fc
 	trim = mrpt_pointcloud_pipeline
-	trimbase = 
+	trimbase = 86c7b2d1
