--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 14f6fb8e
-	base = 31aded1d
+	base = 8055892d
 	trim = mrpt_pf_localization
-	trimbase = 
+	trimbase = 31aded1d
