--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 14f6fb8e
-	base = 252b0d5b
+	base = edb183c0
 	trim = mrpt_map_server
-	trimbase = 
+	trimbase = 252b0d5b
