--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 14f6fb8e
-	base = 47c99413
+	base = 2058d6aa
 	trim = mrpt_reactivenav2d
-	trimbase = 
+	trimbase = 47c99413
