--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 14f6fb8e
-	base = 3a9292b6
+	base = cb63d51c
 	trim = mrpt_tps_astar_planner
-	trimbase = 
+	trimbase = 3a9292b6
