--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 14f6fb8e
-	base = 9bebab03
+	base = 2a955de3
 	trim = mrpt_nav_interfaces
-	trimbase = 
+	trimbase = 9bebab03
