--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 14f6fb8e
-	base = 9f667ab1
+	base = 8b6dd91a
 	trim = mrpt_navigation
-	trimbase = 
+	trimbase = 9f667ab1
