--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 14f6fb8e
-	base = 99a138e6
+	base = 7f3209df
 	trim = mrpt_tutorials
-	trimbase = 
+	trimbase = 99a138e6
