--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 14f6fb8e
-	base = 23b0dfec
+	base = 838ebb60
 	trim = mrpt_msgs_bridge
-	trimbase = 
+	trimbase = 23b0dfec
