--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 14f6fb8e
-	base = a3e2291f
+	base = f9e722e1
 	trim = mrpt_pointcloud_pipeline
-	trimbase = 
+	trimbase = a3e2291f
