--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 14f6fb8e
-	base = 14a2468d
+	base = 931aab6b
 	trim = mrpt_pf_localization
-	trimbase = 
+	trimbase = 14a2468d
