--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 14f6fb8e
-	base = e8a60eaa
+	base = bb8876fa
 	trim = mrpt_map_server
-	trimbase = 
+	trimbase = e8a60eaa
