--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 14f6fb8e
-	base = 847177e9
+	base = 2acfb84e
 	trim = mrpt_reactivenav2d
-	trimbase = 
+	trimbase = 847177e9
