--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 14f6fb8e
-	base = a984fa9d
+	base = 17564312
 	trim = mrpt_tps_astar_planner
-	trimbase = 
+	trimbase = a984fa9d
