--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 14f6fb8e
-	base = b329384e
+	base = 5b2c932d
 	trim = mrpt_nav_interfaces
-	trimbase = 
+	trimbase = b329384e
