--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 14f6fb8e
-	base = 077d840d
+	base = 3f9fa5db
 	trim = mrpt_navigation
-	trimbase = 
+	trimbase = 077d840d
