--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 14f6fb8e
-	base = 65a160dc
+	base = 785687bb
 	trim = mrpt_tutorials
-	trimbase = 
+	trimbase = 65a160dc
