--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 14f6fb8e
-	base = b69037d1
+	base = 1117a5b1
 	trim = mrpt_msgs_bridge
-	trimbase = 
+	trimbase = b69037d1
