--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 14f6fb8e
-	base = d230cf23
+	base = dc0e84b2
 	trim = mrpt_pointcloud_pipeline
-	trimbase = 
+	trimbase = d230cf23
