--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 14f6fb8e
-	base = a6f34fe4
+	base = 1378b01b
 	trim = mrpt_pf_localization
-	trimbase = 
+	trimbase = a6f34fe4
