--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 14f6fb8e
-	base = 89fd99aa
+	base = 96210b80
 	trim = mrpt_map_server
-	trimbase = 
+	trimbase = 89fd99aa
