--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 14f6fb8e
-	base = 67747a2d
+	base = f1a04fca
 	trim = mrpt_reactivenav2d
-	trimbase = 
+	trimbase = 67747a2d
