--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 14f6fb8e
-	base = 19e7614e
+	base = 9853a26b
 	trim = mrpt_tps_astar_planner
-	trimbase = 
+	trimbase = 19e7614e
