--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 14f6fb8e
-	base = 36cf631e
+	base = 2a8b1ace
 	trim = mrpt_nav_interfaces
-	trimbase = 
+	trimbase = 36cf631e
