--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 14f6fb8e
-	base = 75fa837b
+	base = 07f8f82f
 	trim = mrpt_navigation
-	trimbase = 
+	trimbase = 75fa837b
