--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 14f6fb8e
-	base = 58384739
+	base = baef91d9
 	trim = mrpt_tutorials
-	trimbase = 
+	trimbase = 58384739
