--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 14f6fb8e
-	base = 4d786e28
+	base = f6e8416d
 	trim = mrpt_msgs_bridge
-	trimbase = 
+	trimbase = 4d786e28
