--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 14f6fb8e
-	base = 918a4d86
+	base = 39d17468
 	trim = mrpt_pointcloud_pipeline
-	trimbase = 
+	trimbase = 918a4d86
