--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 14f6fb8e
-	base = 7b8571e8
+	base = 6e0779b5
 	trim = mrpt_pf_localization
-	trimbase = 
+	trimbase = 7b8571e8
