--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 14f6fb8e
-	base = 956703b4
+	base = 906d1bab
 	trim = mrpt_map_server
-	trimbase = 
+	trimbase = 956703b4
